# Assignment1/server.js
@@ -27,20 +27,25 @@ app.use(express.static('public'));
 
 //NOTE THAT THIS INFORMATION IS NOT MEANT TO BE USED
 //IT IS ONLY FOR DEBUG/DEMO PURPOSES
+//EVERYTHING IS STILL IN MEMORY
 var users      = require('./users'); 
 var businesses = require('./businesses');
-var categories = require('./categories');
+var categories = require('./categories');   //dictionary of category : [subcategories] {[], []}
+var users = {}; // dictionary of users, username maps to info
 
 //attributes of business that are expected 
 var buisAttr = ["user", "name", "address", "city", "state", "zipcode", "phone", 
     "category", "subcategory"];
-var reviewAttr = ["user", "stars", "expense", "review" ];
+var reviewAttr = ["user", "stars", "expense", "text" ];
 var userAttr = ["username", "firstname", "lastname", "email"];
 
 
 //Above attributes used here to validate
-function isValidReq(req, attr){
+function isValidReq(req, attr, buisSwitch){
     var valid = true;   
+//    if( buisSwitch){
+//        valid = valid && (validCategory( req.category, req.subcategory) );
+//    }
     for ( a of attr){
         valid = valid && req.body[a]; 
         if( !req.body[a]){
@@ -70,7 +75,7 @@ function validCategory(cat, subcat){
 
 //Top level link.
 app.get('/', function (req, res, next) {
-  res.status(200).send("Please visit /businesses\n");
+  res.status(200).send("Welcome! Please visit /businesses\n");
 });
 
 //get ALL businessses
@@ -79,7 +84,7 @@ app.get('/businesses', function(req, res, next){
     //Pagination and logic borrowed from Hessro
     //Like skidrow but more personable
 
-    var size = Object.keys(businesses).length
+    var size = Object.keys(businesses).length;
 
     var page = parseInt(req.query.page) || 1;
     var numPerPage = 10;
@@ -89,7 +94,7 @@ app.get('/businesses', function(req, res, next){
 
     var start = (page -1) * numPerPage;
     var end = start + numPerPage;
-    var pageBuis = (Object.entries(businesses).map(x=>x[1])).slice(start, end);
+    var pageBuis = (Object.entries(businesses)).slice(start, end);
 
     var links = {};
     if (page < lastPage) {
@@ -130,6 +135,8 @@ app.post('/businesses', function(req, res, next) {
     if ( isValidReq(req, buisAttr) ){
         var id = Object.keys(businesses).length;
         businesses[id] = req.body;
+        businesses[id].reviews = {};    //instantiate reviews and photos
+        businesses[id].photos = {};
         res.status(201).json({
             id:id,
             links: { 
@@ -166,6 +173,8 @@ app.put('/businesses/:busiID', function(req, res, next){
 
 });
 
+//delete a specific business
+
 app.delete('/businesses/:busiID', function(req, res, next){
     console.log(" -- req.params:", req.params);
     var id = req.params.busiID;
@@ -189,9 +198,43 @@ app.delete('/businesses/:busiID', function(req, res, next){
  * -REVIEWS ARE ONLY GOT FROM BUSINESSES
  * */
 
+
+//takes a body containing a review object, review has user, star, expense and optional text
 app.post('/businesses/:buisID/reviews', function(req,res,next){
     console.log(" -- req.body", req.body);
     console.log(" -- req.params", req.params);
+    var id = req.params.busiID;
+    var userID = parseInt(req.body.user);
+
+    if( !( isValidReq( req.body, reviewAttr) ) ){
+        res.status(400).json({
+            err: "Malformed review in req body. Did you fill all fields?"
+        });
+    }
+
+    if( !businesses[id]){ 
+        next();
+    }
+    var busi = businesses[id];
+    
+    if( busi.reviews[userID]){
+        res.status(400).json({
+            err: "That user has already submitted a review. Please POST for edits."
+        });
+    }
+
+    var reviewID = busi.reviews.length;
+    req.body['reviewid'] = reviewID;
+    busi.reviews[userID] = req.body; //use username to map to a review
+
+    res.status(201).json({
+        reviewiID: reviewID,
+        links: {
+            reviews: '/businesses/' + id + '/reviews',
+            reviewiID: '/businesses/' + id + '/reviews/' + reviewID
+        }
+    });
+
 
 });
 
@@ -199,7 +242,28 @@ app.put('/businesses/:buisID/reviews/:revID',function(req,res,next){
     console.log(" -- req.body", req.body);
     console.log(" -- req.params", req.params);
     var id = req.params.busiID;
-    var reviewID = req.params.revID;
+    var revID = req.params.revID;
+
+    if( !businesses[id] || !businesses[id].reviews[revID] ){ 
+        next();
+    }
+    var buis = businesses[id];
+    if( isValidReq( req.body.review, reviewAttr) ){
+        businesses[id].reviews[revID] = req.body.reviews;
+
+        res.status(201).json({
+            id:id,
+            reviewID: revID,
+            links: {
+                businesses: '/businesses',
+                reviews: '/businesses/' + id + '/reviews',
+            }
+        });
+    } else{
+        res.status(400).json({
+            err: 'Malformed review recieved. Did you fill all fields?'
+        });
+    }
 
 
     //validate buisiness and review ID, validate user is owner of review
@@ -211,7 +275,13 @@ app.delete('/businesses/:busiID/reviews/:revID', function(req, res, next){
     var id = req.params.busiID;
     var reviewID = req.params.revID;
 
-    //validate buisiness and review ID, validate user is owner of review
+    if( businesses[id].reviews[reviewID]){
+        businesses[id].reviews[reviewID] = null;
+        res.status(204).end();
+    }else{
+        next();
+    }
+    //validate buisiness and review ID
     //then delete
 
 });
@@ -236,27 +306,93 @@ app.delete('/businesses/:busiID/reviews/:revID', function(req, res, next){
 
 //give all users
 app.get('/users', function(req, res, next){
+   var size = Object.keys(users).length;
+
+    var page = parseInt(req.query.page) || 1;
+    var numPerPage = 10;
+    var lastPage = Math.ceil(size / numPerPage);
+    page = page < 1 ? 1: page;
+    page = page > lastPage ? lastPage : page;
+
+    var start = (page -1) * numPerPage;
+    var end = start + numPerPage;
+    var pageUser = (Object.entries(users).slice(start, end));
+    var links = {};
+    if (page < lastPage){
+        links.nextPage = '/users?page=' + (page+1);
+        links.lastPage = '/users?page=' + (lastPage);
+    }
+    if ( page > 1){
+        links.prevPage = '/users?page=' + (page+1);
+        links.firstPage = '/users?page=1'
+    }
+    res.status(200).json({
+        users: pageUser,
+        pageNumber: page,
+        totalPages: lastPage,
+        pageSize: numPerPage,
+        totalCount: size,
+        links: links
+    });
 
 });
 
 //get a single user
 app.get('/users/:userID', function(req, res, next){
-    var id = req.params.userID;
+    console.log(" -- req.params:", req.params);
+    var requestName = req.params.userID;
+
+    if( users[requestName]){
+        var photos = [];
+        var reviews = [];
+        var buis = [];
+        for( b in Object.entries(businesses).map(x=>x[1]) ){
+            if( b.reviews[requestName]){
+                reviews.push( {b.name: b.reviews[requestName] };
+            }
+            if( b.photos[requestName]){
+                photos.push( {b.name: b.photos[requestName] };
+            }
+            if( b.user == requestName){
+                buis.push(b);
+            }
+        }
+
+        var user = users[requestName];
+        user.reviews = reviews;
+        user.photos = photos;
+        user.buisinesses = buis;
+        res.stats(200).json( user );
+
+    }else{
+        next();
+    }
+
 });
 
 //add a user
 app.post('/users', function(req, res, next){
-
+    
 });
 
 //edit a user that exists. 
 app.put('/users/:userID', function(req, res, next){
+    var userID = req.params.userID;
 
+    if( users[userID] ){
+        if isValidReq(req.user, 
+    }
 });
 
 //delete a user (also delete their related businesses and info)
-app.delete('/users/userID', function(req, res, next){
-    var id = req.params.userID;
+app.delete('/users/:userID', function(req, res, next){
+    var userID = req.params.userID;
+    if( users[userID]){
+        users[userID] = null;
+        res.status(204).end();
+    }else{
+        next();
+    }
 });
 
 
@@ -269,22 +405,22 @@ app.delete('/users/userID', function(req, res, next){
  * -DELTE AN EXISTING PHOTO FOR A BUSINESS
  */
 
-app.post('/businesses/:businessID/photos', function( req, res, next){
+app.post('/businesses/:busiID/photos', function( req, res, next){
     console.log(" -- req.body", req.body); 
     var id = req.params.businessID;
     
 });
 
-app.put('/businesses/:businessID/photos', function(req, res, next){
+app.put('/businesses/:busiID/photos', function(req, res, next){
     console.log(" -- req.body:", req.body);
-    var id = req.params.businessID;
+    var id = req.params.busiID;
     var photoID = parseInt(req.query.photoid);
 
 });
 
-app.delete('/businesses/:businessID/photos', function(req, res, next){
+app.delete('/businesses/:busiID/photos', function(req, res, next){
     console.log(" -- req.body:", req.body);
-    var id = req.params.businessID;
+    var id = req.params.busiID;
     var photoID = parseInt(req.query.photoid);
     //if undefined or bad value
     if( photoid < 0 || photoid > businesses[id].photos.length){
@@ -300,8 +436,7 @@ app.delete('/businesses/:businessID/photos', function(req, res, next){
 /* CATEGORY AND SUBCATEGORY
  * USERS WHICH ARE ADMIS MAY ADD CATEGORIES 
  * AND MAY ADD SUBCATEGORIES 
- * -GET CATEGORIES
- * -GET CATEGORIES/SUBCATEGORY
+ * -GET PAGINATED CATEGORIES
  * -DELETE [ADMIN] CATEGORIES
  * -POST ADMIN 
  * -PUT ADMIN EDIT
@@ -341,8 +476,13 @@ app.get('/categories', function(req, res, next){
 });
 
 app.get('/categories/:catID', function(req, res) {
-
     var catID = req.params.catID;
+
+});
+
+
+app.use('*', function(req, res, next){
+
     res.status(404).json({
         err: "Path: "+ req.url + " Does Not Exist. :("
     });
